src/objects/mphRxAPI__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Settings needed to connect to MphRx&apos;s web API.</description>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cert__c</fullName>
        <label>cert</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>MphRX API</label>
</CustomObject>